admission/ValidatingAdmissionPolicy/policies/capabilities-add-netbindservice/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: capabilities-add-netbindservice-initcontainers
  annotations:
    kubeapt.io/uuid: "f2e7ed11-9fd4-4f3a-aac3-176e884fd176"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
